--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,7 @@
 title: "Briana Verdugo"
 description: "Mathematical Statistician | Data & Economic Analysis | Analytics for Public Impact"
-remote_theme: mmistakes/minimal-mistakes@4.24.0
-plugins:
-  - jekyll-remote-theme
-  - jekyll-feed
-  - jekyll-seo-tag
-  - jekyll-sitemap
-  - jekyll-paginate
-  - jekyll-include-cache
+theme: minimal-mistakes-jekyll
+minimal_mistakes_skin: dark
 
 url: "https://brianaverdugo.github.io"
 baseurl: ""
